# specification

./: LICENSE  README.md  dictionary.eclipse
ILInt/: README.md
ILInt/reference/: CMakeLists.txt  README.md
ILInt/reference/src/: main.c
ILInt/reference/src-c/src/: ilint.c  ilint.h  main.c
ILInt/reference/src-csharp/: TagHelpers.cs
ILInt/tools/: README.md
ILInt/tools/ilintconv/: CMakeLists.txt  README.md  ilint.h  main.c  options.h  utils.h
ILInt/tools/ilintconv/cmake/: GTest.cmake  MSVCCRT.cmake
ILInt/tools/ilintconv/src/: errors.c  errors.h  main.c  options.c  options.h  utils.c  utils.h  version.h.in
ILInt/tools/ilintconv/test/: OptionsTest.cpp  OptionsTest.h  UtilsTest.cpp  UtilsTest.h  main.cpp
ILInt/tools/ilintsig_ref/: CMakeLists.txt  README.md
ILInt/tools/ilintsig_ref/src/: main.c
ILTag/: README.md
ILTags/: README.md
crypto/: README.md  dsa.md  dsign.md  ecdsa.md  eddsa.md  elgamal.md  hash.md  irkeystore.md  ocs-random-padding.md  rsa.md
fs/: fileid.md
manuals/: InterlockLedger-IntegrationManual.odt
